# PerfectlyBalancedMultiPlayer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  gap-findings.md  nat-setup.md  roadmap.md
docs/api/: openapi.yaml
docs/context/: README.md  concept-zero.md
docs/diagrams/: data-model.md  sync-sequence.md  system-overview.md
src/: client.rs  config.rs  descriptor_rewriter.rs  file_backend.rs  init.rs  launcher.rs  lib.rs  main.rs  manifest_gen.rs  path_resolver.rs  playset.rs  server.rs  signing.rs
src/domain/: interfaces.rs  mod.rs  types.rs
tests/: integration.rs
